add Balance Anterior

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "visa-analyzer",
   "version": "1.0.0",
   "description": "",
-  "bin": "./index.js",
+  "bin": "./bin/analyze",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
