--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "lodash": "^4.17.5",
+    "meow": "^4.0.0",
     "moment": "^2.22.1",
     "pdf-text-extract": "^1.5.0"
   },
